test/files/pos/noproductN.scala
object Foo { type  S = String }
case class Foo(x: Foo.S) { }
