test/files/neg/macro-overload-typemacros/Macros_Test_2.scala
import language.experimental.macros

object Macros {
  type Foo(x: Int) = macro Impls.foo
  type Foo = Int
}